Fixed cards display

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -127,7 +127,7 @@
 
       <section class="fillers-container">
         <h3 class="header-sorting header-fillers">Наполнители:</h3>
-        
+
         <div class="fillers-elements">
           <form class="fillers">
             <label class="checkbox-element">
@@ -279,7 +279,7 @@
                 <span class="unit-monetary">/кг</span>
               </p>
               <a class="ice-cream-name" href="">
-                Сливочное с брусничным джемом
+                Сливочное с брусничным<br />джемом
               </a>
               <button class="hidden-button" type="button">
                 Быстрый просмотр
@@ -347,7 +347,7 @@
                 <span class="unit-monetary">/кг</span>
               </p>
               <a class="ice-cream-name" href="">
-                Сливочно-ванильное с кусочками шоколада
+                Сливочно-ванильное с<br />кусочками шоколада
               </a>
               <button class="hidden-button" type="button">
                 Быстрый просмотр
