Updated page numbers buttons

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -409,7 +409,7 @@
       <section class="page-numbers">
         <ul class="list-numbers">
           <li>
-            <a href=""
+            <a
               ><svg
                 class="arrow-button"
                 id="left-arrow-button"
@@ -425,7 +425,9 @@
               </svg>
             </a>
           </li>
-          <li><a href="catalog_creamy.html">1</a></li>
+          <li>
+            <a class="page-1-button" href="catalog_creamy.html">1</a>
+          </li>
           <li><a href="#">2</a></li>
           <li><a href="#">3</a></li>
           <li><a href="#">4</a></li>
