Update hits elements

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -409,8 +409,8 @@
       <section class="page-numbers">
         <ul class="list-numbers">
           <li>
-            <a
-              ><svg
+            <button type="button">
+              <svg
                 class="arrow-button"
                 id="left-arrow-button"
                 xmlns="http://www.w3.org/2000/svg"
@@ -423,7 +423,7 @@
                   d="M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z"
                 />
               </svg>
-            </a>
+            </button>
           </li>
           <li>
             <a class="page-1-button" href="catalog_creamy.html">1</a>
@@ -433,8 +433,8 @@
           <li><a href="#">4</a></li>
           <li><a href="#">5</a></li>
           <li>
-            <a href="#"
-              ><svg
+            <button type="button">
+              <svg
                 class="arrow-button"
                 id="right-arrow-button"
                 xmlns="http://www.w3.org/2000/svg"
@@ -447,7 +447,7 @@
                   d="M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z"
                 />
               </svg>
-            </a>
+            </button>
           </li>
         </ul>
       </section>
