Fixed cards elements for hits & catalog

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -203,7 +203,8 @@
       <section class="tastes-container">
         <ul class="tastes-creamy">
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_1.png" alt="Мороженое 1" />
               <p class="price">
                 310
@@ -220,7 +221,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_2.png" alt="Мороженое 2" />
               <p class="price">
                 380
@@ -237,7 +239,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_3.png" alt="Мороженое 3" />
               <p class="price">
                 355
@@ -254,7 +257,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_4.png" alt="Мороженое 4" />
               <p class="price">
                 415
@@ -271,7 +275,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_5.png" alt="Мороженое 5" />
               <p class="price">
                 325
@@ -288,7 +293,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_6.png" alt="Мороженое 6" />
               <p class="price">
                 410
@@ -305,7 +311,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_7.png" alt="Мороженое 7" />
               <p class="price">
                 375
@@ -322,7 +329,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_8.png" alt="Мороженое 8" />
               <p class="price">
                 320
@@ -339,7 +347,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_9.png" alt="Мороженое 9" />
               <p class="price">
                 440
@@ -356,7 +365,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_10.png" alt="Мороженое 10" />
               <p class="price">
                 435
@@ -373,7 +383,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_11.png" alt="Мороженое 11" />
               <p class="price">
                 355
@@ -390,7 +401,8 @@
           </li>
 
           <li class="tastes-item">
-            <a class="hit-container" href="">
+            <div class="selected-element"></div>
+            <a class="taste-item-container" href="">
               <img src="IMG/Taste_12.png" alt="Мороженое 12" />
               <p class="price">
                 420
