--- a/index.html
+++ b/index.html
@@ -73,82 +73,86 @@
         </section>
       </div>
 
-        <section class="hits-container">
-          <ul class="hits">
-            <li class="hit-item">
-              <a class="hit-item-container" href="">
-                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-                <img src="IMG/Taste_1.png" alt="Мороженое 1" />
-                <p class="price">
-                  310
-                  <span class="rub">₽</span>
-                  <span class="unit-monetary">/кг</span>
-                </p>
-                <a class="ice-cream-name" href=""
-                  >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
-                >
-                <button class="hidden-button" type="button">
-                  Быстрый просмотр
-                </button>
-              </a>
-            </li>
+      <section class="hits-container">
+        <ul class="hits">
+          <li class="hit-item">
+            <div class="selected-element"></div>
+            <a class="hit-item-container" href="">
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img src="IMG/Taste_1.png" alt="Мороженое 1" />
+              <p class="price">
+                310
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href=""
+                >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
+              >
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
 
-            <li class="hit-item">
-              <a class="hit-item-container" href="">
-                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-                <img src="IMG/Taste_2.png" alt="Мороженое 2" />
-                <p class="price">
-                  380
-                  <span class="rub">₽</span>
-                  <span class="unit-monetary">/кг</span>
-                </p>
+          <li class="hit-item">
+            <div class="selected-element"></div>
+            <a class="hit-item-container" href="">
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img src="IMG/Taste_2.png" alt="Мороженое 2" />
+              <p class="price">
+                380
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
 
-                <a class="ice-cream-name" href=""
-                  >Сливочно-кофейное с кусочками шоколада</a
-                >
-                <button class="hidden-button" type="button">
-                  Быстрый просмотр
-                </button>
-              </a>
-            </li>
+              <a class="ice-cream-name" href=""
+                >Сливочно-кофейное с кусочками шоколада</a
+              >
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
 
-            <li class="hit-item">
-              <a class="hit-item-container" href="">
-                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-                <img src="IMG/Taste_3.png" alt="Мороженое 3" />
-                <p class="price">
-                  355
-                  <span class="rub">₽</span>
-                  <span class="unit-monetary">/кг</span>
-                </p>
-                <a class="ice-cream-name" href=""
-                  >Сливочно-клубничное с присыпкой из белого шоколада</a
-                >
-                <button class="hidden-button" type="button">
-                  Быстрый просмотр
-                </button>
-              </a>
-            </li>
+          <li class="hit-item">
+            <div class="selected-element"></div>
+            <a class="hit-item-container" href="">
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img src="IMG/Taste_3.png" alt="Мороженое 3" />
+              <p class="price">
+                355
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href=""
+                >Сливочно-клубничное с присыпкой из белого шоколада</a
+              >
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
 
-            <li class="hit-item">
-              <a class="hit-item-container" href="">
-                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-                <img src="IMG/Taste_4.png" alt="Мороженое 4" />
-                <p class="price">
-                  415
-                  <span class="rub">₽</span>
-                  <span class="unit-monetary">/кг</span>
-                </p>
-                <a class="ice-cream-name" href=""
-                  >Сливочное крем-брюле с карамельной подливкой</a
-                >
-                <button class="hidden-button" type="button">
-                  Быстрый просмотр
-                </button>
-              </a>
-            </li>
-          </ul>
-        </section>
+          <li class="hit-item">
+            <div class="selected-element"></div>
+            <a class="hit-item-container" href="">
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img src="IMG/Taste_4.png" alt="Мороженое 4" />
+              <p class="price">
+                415
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href=""
+                >Сливочное крем-брюле с карамельной подливкой</a
+              >
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+        </ul>
+      </section>
 
       <section class="SEO">
         <h3>
