Fixed popup window

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -498,10 +498,10 @@
               alt="Мороженое 1"
             />
           </div>
-          <div class="taste-text">Пломбир с апельсиновым джемом</div>
-          <div>1.5 кг х</div>
-          <div class="price-text">200 руб.</div>
-          <div>300 руб.</div>
+          <p class="taste-text">Пломбир с апельсиновым джемом</p>
+          <p class="weight-text">1.5 кг х</p>
+          <p class="price-text">200 руб.</p>
+          <p class="final-sum">300 руб.</p>
         </li>
 
         <li class="product-item">
@@ -518,18 +518,24 @@
               alt="Мороженое 3"
             />
           </div>
-          <div class="taste-text">Клубничный пломбир с присыпкой из белого шоколада</div>
-          <div>1.5 кг х</div>
-          <div class="price-text">300 руб.</div>
-          <div>450 руб.</div>
+          <p class="taste-text">
+            Клубничный пломбир с присыпкой из белого шоколада
+          </p>
+          <p class="weight-text">1.5 кг х</p>
+          <p class="price-text">300 руб.</p>
+          <p class="final-sum">450 руб.</p>
         </li>
       </ul>
 
       <hr />
 
-      <p>Итого: 750 руб.</p>
+      <div class="total-container">
+        <p class="total-text">Итого: 750 руб.</p>
 
-      <button class="place-an-order-button" type="button">Оформить заказ</button>
+        <button class="place-an-order-button" type="button">
+          Оформить заказ
+        </button>
+      </div>
     </section>
 
     <script src="JS/renderingElements.js"></script>
