Update popup window of filled basket

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -527,7 +527,7 @@
         </li>
       </ul>
 
-      <hr />
+      <hr class="popup-split-line"/>
 
       <div class="total-container">
         <p class="total-text">Итого: 750 руб.</p>
