Updated popup basket window

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -26,7 +26,7 @@
 
       <section class="sorting-container">
         <div class="drop-down-list-container">
-          <h3 class="header-sorting header-sorting-style">Сортировка:</h3>
+          <h3 class="header-sorting header-sorting-style">Sorting:</h3>
 
           <select class="drop-down-list" id="select-by">
             <option value="by-popularity">по популярности</option>
@@ -201,6 +201,7 @@
       </section>
 
       <section class="tastes-container">
+        <h4 class="visually-hidden">Tastes</h4>
         <ul class="tastes-creamy">
           <li class="tastes-item">
             <div class="selected-element"></div>
@@ -419,6 +420,7 @@
       </section>
 
       <section class="page-numbers">
+        <h5 class="visually-hidden">Page numbers</h5>
         <ul class="list-numbers">
           <li>
             <button type="button">
@@ -482,7 +484,8 @@
 
     <footer class="main-footer"></footer>
 
-    <section class="modal popup-full-basket">
+    <section class="modal popup-filled-basket">
+      <h6 class="visually-hidden">Filled basket</h6>
       <ul class="products-in-basket">
         <li class="product-item">
           <div class="delete-product-container">
