Fixed popup window filled basket

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -484,7 +484,7 @@
 
     <footer class="main-footer"></footer>
 
-    <section class="modal popup-filled-basket">
+    <!-- <section class="modal popup-filled-basket">
       <h6 class="visually-hidden">Filled basket</h6>
       <ul class="products-in-basket">
         <li class="product-item">
@@ -539,7 +539,7 @@
           Оформить заказ
         </button>
       </div>
-    </section>
+    </section> -->
 
     <script src="JS/renderingElements.js"></script>
     <script type="module" src="JS/catalog.js"></script>
