Updated page number buttons

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -26,7 +26,7 @@
 
       <section class="sorting-container">
         <div class="drop-down-list-container">
-          <h3 class="header-sorting header-sorting-style">Sorting:</h3>
+          <h3 class="header-sorting header-sorting-style">Сортировка:</h3>
 
           <select class="drop-down-list" id="select-by">
             <option value="by-popularity">по популярности</option>
@@ -483,63 +483,6 @@
     </main>
 
     <footer class="main-footer"></footer>
-
-    <!-- <section class="modal popup-filled-basket">
-      <h6 class="visually-hidden">Filled basket</h6>
-      <ul class="products-in-basket">
-        <li class="product-item">
-          <div class="delete-product-container">
-            <button class="delete-product-button" type="button">
-              <img src="IMG/cross-small.svg" width="11" height="11" />
-            </button>
-          </div>
-          <div class="taste-image">
-            <img
-              src="IMG/Taste_1.png"
-              width="33"
-              height="33"
-              alt="Мороженое 1"
-            />
-          </div>
-          <p class="taste-text">Пломбир с апельсиновым джемом</p>
-          <p class="weight-text">1.5 кг х</p>
-          <p class="price-text">200 руб.</p>
-          <p class="final-sum">300 руб.</p>
-        </li>
-
-        <li class="product-item">
-          <div class="delete-product-container">
-            <button class="delete-product-button" type="button">
-              <img src="IMG/cross-small.svg" width="11" height="11" />
-            </button>
-          </div>
-          <div class="taste-image">
-            <img
-              src="IMG/Taste_3.png"
-              width="33"
-              height="33"
-              alt="Мороженое 3"
-            />
-          </div>
-          <p class="taste-text">
-            Клубничный пломбир с присыпкой из белого шоколада
-          </p>
-          <p class="weight-text">1.5 кг х</p>
-          <p class="price-text">300 руб.</p>
-          <p class="final-sum">450 руб.</p>
-        </li>
-      </ul>
-
-      <hr class="popup-split-line"/>
-
-      <div class="total-container">
-        <p class="total-text">Итого: 750 руб.</p>
-
-        <button class="place-an-order-button" type="button">
-          Оформить заказ
-        </button>
-      </div>
-    </section> -->
 
     <script src="JS/renderingElements.js"></script>
     <script type="module" src="JS/catalog.js"></script>
