Made page number buttons

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -423,7 +423,7 @@
         <h5 class="visually-hidden">Page numbers</h5>
         <ul class="list-numbers">
           <li>
-            <button type="button">
+            <a href="" class="disabled">
               <svg
                 class="arrow-button"
                 id="left-arrow-button"
@@ -437,7 +437,7 @@
                   d="M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z"
                 />
               </svg>
-            </button>
+            </a>
           </li>
           <li class="num-button">
             <div class="selected-num-button"></div>
@@ -460,7 +460,7 @@
             <a href="">5</a>
           </li>
           <li>
-            <button type="button">
+            <a href="">
               <svg
                 class="arrow-button"
                 id="right-arrow-button"
@@ -474,7 +474,7 @@
                   d="M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z"
                 />
               </svg>
-            </button>
+            </a>
           </li>
         </ul>
       </section>
